Brief notes on significant changes and additions in each release

== Version 0.7.8

* Added --retry parameter for file uploads to allow retrying of failed uploads

* Added --force parameter for file uploads to reset tracking files, allowing complete 
  resends
  
* Fixed bug with directory uploads mangling file names

* Fixed bug with tracking files with same root file name, e.g. foo.rdf and foo.css

* Changed FileManager code so that all .ok and .fail fails are put into a shadow 
  ".pho" directory, this avoids polluting directories with tracking files

== Version 0.7.7

* Included bug fixes from @kiyanwang into OAI support. Now properly handles resumption 
  tokens.
  
* Added dependency on RDF.rb, rdf/json, rdf/raptor. Changed Pho::Converter to use this 
  code.
  
* Removed Pho::RDF.Parser -- just use RDF.rb and its plugins. Submission of ntriples 
  to platform store can now be done directly on store object.
  
* Working to remove dependency on Redland Ruby bindings, also remove unnecessary parsing/converting 
  code as Ruby RDF libraries have improved and Platform now supports wider range of RDF serialisations
  
* Fixed bug in store.sparql_client, reference to @self rather than self

== Version 0.7.6

* Fixed bug in QueryProfile.read_from_store which was expecting an rdfs:label 
  to always be present

== Version 0.7.5

* Added Pho::OAI::Statistics class to get basic metrics from the OAI service
* Changes FieldPredicateMap.create_mapping implementation to build fpmap entry URIs
  using the MD5 of the property URI. This removes clashes for when properties such as 
  dc:title and dcterms:title are both added to store config
   
* Added FieldPredicateMap.add_mapping

== Version 0.7.4

* Moved version control to github.
* Added store.name property
* Added remove_all methods to FieldPredicateMap and QueryProfile

== Version 0.7.3

* Fixed bug in Snapshot result parsing, now returns nil if no snapshot for store